Changed copyright notification by the author's request.
(Old svn revision: 17907)

--- a/po/az.po
+++ b/po/az.po
@@ -1,5 +1,5 @@
 # Azerbaijani Turkish translation of xfce4-panel.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Mətin Əmirov <metin@karegen.com>, 2003, 2004.
 #
