--- a/po/ca.po
+++ b/po/ca.po
@@ -1,5 +1,5 @@
 # xfce4-panel for XFce desktop environment.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004.
 #
