--- a/po/fi.po
+++ b/po/fi.po
@@ -1,5 +1,5 @@
 # Translation of xfce4-panel into Finnish.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Ilkka Ollakka <ilkka.ollakka@iki.fi>, 2003
 # Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005.
