--- a/po/it.po
+++ b/po/it.po
@@ -1,5 +1,5 @@
 # Italian translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Alex Dupre <ale@FreeBSD.org>, 2004.
 # Luca Marrocco <buildup@libero.it>, 2005.
