--- a/po/ms.po
+++ b/po/ms.po
@@ -1,5 +1,5 @@
 # Xfce4-panel Malay translation.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Harun Musa <mharun@gmx.net>, 2003.
 #
