--- a/po/ta.po
+++ b/po/ta.po
@@ -1,5 +1,5 @@
 # Tamil translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
 #
