--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -1,5 +1,5 @@
 # translation of xfce4-panel.po to Bangla INDIA.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Runa Bhattacharjee <runab@redhat.com>, 2005.
 #
