--- a/po/el.po
+++ b/po/el.po
@@ -1,5 +1,5 @@
 # translation of xfce4-panel.po to Ελληνικά
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Stavros Giannouris <StavrosG2002@freemail.gr>, 2005.
 #
