--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1,5 +1,5 @@
 # British English translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Zuza Software Foundation (Translate.org.za), 2004.
 #
