--- a/po/eo.po
+++ b/po/eo.po
@@ -1,5 +1,5 @@
 # Esperanto translations for the xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Sylvain Vedrenne <sylvain.vedrenne@free.fr>, 2005.
 #
