--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -1,5 +1,5 @@
 # Spanish translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Edscott Wilson García <edscott@xfce.org>, 2003-2004.
 #
