--- a/po/eu.po
+++ b/po/eu.po
@@ -1,5 +1,5 @@
 # Euskera translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Jon Latorre Martinez <patataman@airtel.net>, 2003.
 # Piarres Beobide Egaña <pi@beobide.net>, 2004.
