--- a/po/fa.po
+++ b/po/fa.po
@@ -1,5 +1,5 @@
 # Persian translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Abbas Izad <abbasizad@hotmail.com>, 2003, 2004.
 #
