--- a/po/gu.po
+++ b/po/gu.po
@@ -1,5 +1,5 @@
 # Gujarati translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Ankit Patel <ankit644@yahoo.com>, 2004-2005.
 #
