--- a/po/hi.po
+++ b/po/hi.po
@@ -1,5 +1,5 @@
 # Hindi translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # G Karunakar <karunakar@freedomink.org>, 2003.
 #
