--- a/po/hu.po
+++ b/po/hu.po
@@ -1,5 +1,5 @@
 # Hungarian translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Somogyi Peter <jerry@gnu>, 2003.
 # Egmont Koblinger <egmont@uhulinux.hu>, 2003
