--- a/po/hy.po
+++ b/po/hy.po
@@ -1,5 +1,5 @@
 # Armenian translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Norayr Chilingaryan <norik@freenet.am>, 2005.
 #
