--- a/po/ko.po
+++ b/po/ko.po
@@ -1,5 +1,5 @@
 # Korean translations for Xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # ByungHyun Choi<byunghyun.choi@gmail.com>, 2005.
 #
