--- a/po/lt.po
+++ b/po/lt.po
@@ -1,5 +1,5 @@
 # Lithuanian translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Mantas Zapolskas <mantaz@users.sf.net>, 2003-2004.
 #
