--- a/po/mr.po
+++ b/po/mr.po
@@ -1,5 +1,5 @@
 # Marathi Translation of xfce4-panel.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Pallavi Nikam <pallavi_edu@rediffmail.com>, 2005.
 #
