--- a/po/pa.po
+++ b/po/pa.po
@@ -1,5 +1,5 @@
 # Punjabi translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Amanpreet Singh Alam <aalam@redhat.com>, 2004.
 #
