--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -1,5 +1,5 @@
 # Portuguese translation of xfce4-panel.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Nuno Donato <nunodonato@gmail.com.pt>, 2004.
 #
