--- a/po/ru.po
+++ b/po/ru.po
@@ -1,5 +1,5 @@
 # Russian translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Poul Ionkin <wizzard@nmg.lv>, 2003.
 # Anthony Ivanoff <a-i@bk.ru>, 2004, 2005.
