--- a/po/sv.po
+++ b/po/sv.po
@@ -1,5 +1,5 @@
 # Swedish translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Joakim Andreasson <joakim.andreasson@gmx.net>, 2003-2004.
 #
