--- a/po/vi.po
+++ b/po/vi.po
@@ -1,5 +1,5 @@
 # Vietnamese translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Lâm Vĩnh Niên <nienvl@yahoo.ca>, 2004.
 #
