--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,6 +1,6 @@
 # #-#-#-#-#  zh_CN.po (xfce4-panel 4.3.22)  #-#-#-#-#
 # Simplified Chinese translations for xfce-mcs-plugins package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Yongtao Yang <yongtao.yang@telia.com>, 2004.
 #
