--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,5 +1,5 @@
 # Traditional Chinese translations for xfce4-panel package.
-# Copyright (C) 2005 Jasper Huijsmans.
+# Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # umm <umm@pchome.com.tw>, 2003.
 # Ambrose Li <acli@ada.dhs.org>, 2004.
