--- a/po/el.po
+++ b/po/el.po
@@ -1,4 +1,4 @@
-# translation of xfce4-panel.po to Ελληνικά
+# Greek translation of xfce4-panel
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Stavros Giannouris <StavrosG2002@freemail.gr>, 2005.
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-09-29 20:47+0900\n"
-"PO-Revision-Date: 2005-09-29 20:20+0900\n"
+"PO-Revision-Date: 2005-09-30 19:48+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Ελληνικά\n"
 "MIME-Version: 1.0\n"
@@ -19,109 +19,110 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:167
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "Ένα αντικείμενο αφαιρέθηκε αναπάντεχα: \"%s\"."
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:664
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "Απομάκρυνση αντικειμένου %s ;"
+msgstr "Διαγραφή \"%s\"?"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:669 ../panel/panel.c:515
-#: ../panel/panel-app.c:558 ../panel/panel-app.c:583 ../panel/panel-app.c:610
-#: ../panel/panel-settings.c:1199 ../plugins/launcher/launcher.c:312
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:669
+#: ../panel/panel.c:515
+#: ../panel/panel-app.c:558
+#: ../panel/panel-app.c:583
+#: ../panel/panel-app.c:610
+#: ../panel/panel-settings.c:1199
+#: ../plugins/launcher/launcher.c:312
 #: ../plugins/launcher/launcher.c:357
 msgid "Xfce Panel"
 msgstr "Ταμπλώ του Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:671
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
-msgstr ""
+msgid "The item will be removed from the panel and its configuration will be lost."
+msgstr "Αυτό το αντικείμενο θα αφαιρεθεί από το ταμπλό και οι ρυθμίσεις του θα χαθούν."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:755
-#, fuzzy
 msgid "Item Preferences"
-msgstr "Ιδιότητες αντικειμένου"
+msgstr "Προτιμήσεις Αντικειμένου"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
-#, fuzzy
 msgid "Remove Item"
-msgstr "Απομάκρυνση αντικειμένου %s ;"
+msgstr "Απομάκρυνση αντικειμένου"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:775 ../panel/panel.c:540
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:775
+#: ../panel/panel.c:540
 #: ../panel/panel-settings.c:1253
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Προτιμήσεις Ταμπλό"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:783 ../panel/panel.c:547
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:783
+#: ../panel/panel.c:547
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "Διαχείριση Αντικειμένων στο Ταμπλό"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:791 ../panel/panel.c:554
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:791
+#: ../panel/panel.c:554
 msgid "New Panel"
-msgstr "Ταμπλώ του Xfce"
+msgstr "Νέο Ταμπλό"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:799 ../panel/panel.c:561
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:799
+#: ../panel/panel.c:561
 msgid "Remove this Panel"
-msgstr "Απομάκρυνση αντικειμένου %s ;"
+msgstr "Αφαίρεση παρόντος Ταμπλό"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813
 msgid "About this Item"
-msgstr ""
+msgstr "Περί αυτού του Αντικειμένου"
 
-#: ../libxfce4panel/xfce-panel-plugin-iface.c:823 ../panel/panel.c:572
-#, fuzzy
+#: ../libxfce4panel/xfce-panel-plugin-iface.c:823
+#: ../panel/panel.c:572
 msgid "About the Xfce Panel"
-msgstr "Ταμπλώ του Xfce"
+msgstr "Περί του Ταμπλό του Xfce"
 
-#: ../panel/panel.c:524 ../plugins/actions/actions.c:332
+#: ../panel/panel.c:524
+#: ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "1Έξοδος"
 
 #: ../panel/panel.c:530
-#, fuzzy
 msgid "Restart"
-msgstr "Επ_ανεκκίνηση"
+msgstr "Επανεκκίνηση"
 
-#: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#: ../panel/panel-item-manager.c:353
+#: ../panel/panel-item-manager.c:361
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr ""
-"Αδυναμία εκτέλεσης \"%s\":\n"
-"%s"
+msgstr "Δεν ήταν δυνατό το άνοιγμα του αρθρώματος \"%s\""
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
 msgstr "Είστε σίγουρος ότι θέλετε να βγείτε;"
 
 #: ../panel/panel-app.c:560
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Ταμπλώ του Xfce"
+msgstr "Έξοδος από το Ταμπλό του Xfce;"
 
 #: ../panel/panel-app.c:561
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "Δεν μπορείτε να αφαιρέσετε το τελευταίο ταμπλό. Μήπως θέλετε να βγείτε από το πρόγραμμα;"
 
 #: ../panel/panel-app.c:581
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "Αφαίρεση Ταμπλό \"%d\";"
 
 #: ../panel/panel-app.c:585
 msgid "The panel will be removed and its configuration will be lost."
-msgstr ""
+msgstr "Αυτό το ταμπλό θα αφαιρεθεί και οι ρυθμίσεις του θα χαθούν."
 
 #: ../panel/panel-app.c:618
 msgid "Developer"
 msgstr "Ανάπτυξη"
 
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -133,8 +134,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-" Το Ταμπλώ του Xfce\n"
-" Εκδοση %s\n"
+" Το Ταμπλό του Xfce %s\n"
 " \n"
 " Μέρος του Περιβάλλοντος Εργασίας Xfce\n"
 " http://www.xfce.org\n"
@@ -148,6 +148,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+" Χρήση: %s [ΕΠΙΛΟΓΕΣ]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -163,21 +165,29 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" ΕΠΙΛΟΓΕΣ\n"
+" -h, --help      Προβολή αυτού του μηνύματος και έξοδος\n"
+" -v, --version   Προβολή αυτού του μηνύματος και έξοδος\n"
+" -c, --customize Εμφάνιση διαλόγου ρυθμίσεων\n"
+" -s, --save      Αποθήκευση των ρυθμίσεων στα ταμπλό\n"
+" -r, --restart   Επανεκκίνηση των ταμπλό\n"
+" -q, --quit      Τέλος συνεδρίας\n"
+" -x, --exit      Έξοδος από τα ταμπλό\n"
+" -a, --add       Προσθήκη νέων αντικειμένων\n"
+"\n"
 
 #. floating?
 #: ../panel/panel-settings.c:382
-#, fuzzy
 msgid "Panel Type"
-msgstr "Μέγεθος ταμπλό:"
+msgstr "Τύπος Ταμπλό"
 
 #: ../panel/panel-settings.c:391
-#, fuzzy
 msgid "Fixed Position"
-msgstr "Θέση"
+msgstr "Σταθερή Θέση"
 
 #: ../panel/panel-settings.c:393
 msgid "Freely Moveable"
-msgstr ""
+msgstr "Ελεύθερα Μετακινούμενο"
 
 #. position
 #: ../panel/panel-settings.c:399
@@ -185,19 +195,16 @@ msgid "Position"
 msgstr "Θέση"
 
 #: ../panel/panel-settings.c:483
-#, fuzzy
 msgid "_Full Width"
-msgstr "Πλήρες πλάτος:"
+msgstr "_Πλήρες πλάτος"
 
 #: ../panel/panel-settings.c:492
-#, fuzzy
 msgid "Auto_hide"
-msgstr "Αυτόματη απόκρυψη"
+msgstr "_Αυτόματη απόκρυψη"
 
 #: ../panel/panel-settings.c:510
-#, fuzzy
 msgid "Orientation:"
-msgstr "Προσανατολισμός ταμπλό:"
+msgstr "Προσανατολισμός:"
 
 #: ../panel/panel-settings.c:522
 msgid "Horizontal"
@@ -208,9 +215,8 @@ msgid "Vertical"
 msgstr "Κάθετο"
 
 #: ../panel/panel-settings.c:533
-#, fuzzy
 msgid "Handle Style:"
-msgstr "Λαβές:"
+msgstr "Στυλ Χερουλιών:"
 
 #: ../panel/panel-settings.c:545
 msgid "At both sides"
@@ -227,7 +233,7 @@ msgstr "Στο τέλος"
 #: ../panel/panel-settings.c:583
 #, fuzzy
 msgid "Monitor"
-msgstr "Επεξεργαστής κειμένου"
+msgstr "_Παρακολούθηση"
 
 #. size
 #: ../panel/panel-settings.c:665
@@ -256,29 +262,26 @@ msgid "Full"
 msgstr "Πλήρες"
 
 #: ../panel/panel-settings.c:1018
-msgid ""
-"Drag items from the list to a panel or move existing items to a new location."
-msgstr ""
+msgid "Drag items from the list to a panel or move existing items to a new location."
+msgstr "Σύρετε αντικείμενα από τη λίστα στο ταμπλό ή μετακινήσετε υπάρχοντα αντικείμενα σε νέα τοποθεσία."
 
 #: ../panel/panel-settings.c:1036
 msgid "Avalaible Items"
-msgstr ""
+msgstr "Διαθέσιμα Αντικείμενα"
 
 #: ../panel/panel-settings.c:1049
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "Προσθήκη στο επιλεγμένο ταμπλό"
 
 #: ../panel/panel-settings.c:1255
-#, fuzzy
 msgid "Add Items"
-msgstr "Προσθήκη _νέου αντικειμένου"
+msgstr "Προσθήκη Αντικείμένων"
 
-#: ../plugins/launcher/launcher.c:310 ../plugins/launcher/launcher.c:355
-#, fuzzy, c-format
+#: ../plugins/launcher/launcher.c:310
+#: ../plugins/launcher/launcher.c:355
+#, c-format
 msgid "Could not run \"%s\""
-msgstr ""
-"Αδυναμία εκτέλεσης \"%s\":\n"
-"%s"
+msgstr "Αδυναμία εκτέλεσης \"%s\""
 
 #: ../plugins/launcher/launcher.c:1137
 msgid "New item"
@@ -373,22 +376,16 @@ msgid "Use _startup notification"
 msgstr "Χρήση γνω_στοποίηση εκκίνησης"
 
 #: ../plugins/launcher/launcher-dialog.c:1104
-#, fuzzy
 msgid "New Item"
-msgstr "Νέο αντικείμενο"
+msgstr "Νέο Αντικείμενο"
 
 #: ../plugins/launcher/launcher-dialog.c:1209
-msgid ""
-"The first item in the list is shown on the panel. Additional items will "
-"appear in a menu."
-msgstr ""
-"Το πρώτο αντικείμενο στη λίστα εμφανίζεται στο ταμπλό. Τα υπόλοιπα θα μπουν "
-"σε μενού."
+msgid "The first item in the list is shown on the panel. Additional items will appear in a menu."
+msgstr "Το πρώτο αντικείμενο στη λίστα εμφανίζεται στο ταμπλό. Τα υπόλοιπα θα μπουν σε μενού."
 
 #: ../plugins/launcher/launcher-dialog.c:1246
-#, fuzzy
 msgid "Configure Launcher"
-msgstr "Εκκινητής"
+msgstr "Ρύθμιση Εκκινητή"
 
 #: ../plugins/launcher/launcher-dialog.c:1255
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
@@ -400,9 +397,8 @@ msgid "Select file"
 msgstr "Επιλογή αρχείου"
 
 #: ../plugins/separator/separator.c:241
-#, fuzzy
 msgid "Configure Separator"
-msgstr "Διαχωριστικό"
+msgstr "Ρύθμιση Διαχωριστικού"
 
 #: ../plugins/separator/separator.c:253
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -410,49 +406,43 @@ msgid "Separator"
 msgstr "Διαχωριστικό"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "Διαχωριστικό"
+msgstr "Εμφάνιση διαχωριστικού"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "_Επέκταση"
 
 #: ../plugins/actions/actions.c:295
 #, fuzzy
 msgid "Configure Panel Actions"
-msgstr "Ρυθμίσεις του Ταμπλό του Xfce"
+msgstr "Καταγραφή ενεργειών φίλτρων"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "Ρυθμίσεις Πίνακα"
+msgstr "Ενέργειες Ταμπλό"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "Επιλογή εντολής"
+msgstr "Επιλογή τύπου ενέργειας:"
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "Κ_λείδωμα"
+msgstr "Κλείδωμα οθόνης"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "Κ_λείδωμα"
+msgstr "Έξοδος + Κλείδωμα οθόνης"
 
 #: ../plugins/tasklist/tasklist.c:320
 msgid "Configure Task List"
-msgstr ""
+msgstr "Ρυθμίσεις Λίστας Εργασιών"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "Λίστα διεργασιών"
+msgstr "Λίστα Εργασιών"
 
 #: ../plugins/tasklist/tasklist.c:345
 msgid "Show tasks from _all workspaces"
@@ -463,25 +453,23 @@ msgid "Show application _names"
 msgstr "Προβολή ο_νομάτων εφαρμογών"
 
 #: ../plugins/tasklist/tasklist.c:369
-#, fuzzy
 msgid "Never group tasks"
-msgstr "_Να γίνεται πάντα ομαδοποίηση παραθύρων"
+msgstr "Όχι ομαδοποίηση παραθύρων"
 
 #: ../plugins/tasklist/tasklist.c:372
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "_Να γίνεται πάντα ομαδοποίηση παραθύρων"
+msgstr "Αυτόματη ομαδοποίηση εργασιών"
 
 #: ../plugins/tasklist/tasklist.c:375
-#, fuzzy
 msgid "Always group tasks"
-msgstr "_Να γίνεται πάντα ομαδοποίηση παραθύρων"
+msgstr "Πάντα ομαδοποίηση εργασιών"
 
 #: ../plugins/pager/pager.c:275
 msgid "Configure Pager"
-msgstr ""
+msgstr "Ρύθμιση Ειδοποιητή"
 
-#: ../plugins/pager/pager.c:287 ../plugins/pager/pager.desktop.in.in.h:2
+#: ../plugins/pager/pager.c:287
+#: ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
 msgstr "Ειδοποιητής"
 
@@ -503,35 +491,32 @@ msgid "Unable to register system tray: %s"
 msgstr "Αδύνατη η καταχώρηση της εργαλειοθήκης συστήματος: %s"
 
 #: ../plugins/systray/systray.c:345
-#, fuzzy
 msgid "Configure Status Area"
-msgstr "Περιοχή Κατάστασης"
+msgstr "Ρύθμιση Περιοχής Ειδοποίησης"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "Status Area"
 msgstr "Περιοχή Κατάστασης"
 
-#: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
-#, fuzzy
+#: ../plugins/systray/systray.c:370
+#: ../plugins/clock/clock.c:442
 msgid "Show _frame"
-msgstr "Εμφάνιση _χρόνου"
+msgstr "Εμ_φάνιση πλαισίου"
 
 #: ../plugins/iconbox/iconbox.c:748
-#, fuzzy
 msgid "Configure Icon Box"
-msgstr "Εικονοθήκη του Xfce"
+msgstr "Ρυθμίσεις Icon Box"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 #, fuzzy
 msgid "Icon Box"
-msgstr "Εικονοθήκη"
+msgstr "Icon Box"
 
 #: ../plugins/iconbox/iconbox.c:774
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "Εμφάνιση μόνο ελα_χιστοποιημένων εφαρμογών"
+msgstr "Εμφάνιση μόνο ελαχιστοποιημένων εφαρμογών"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -546,14 +531,13 @@ msgid "%A %d %B %Y"
 msgstr "%A, %d %B %Y"
 
 #: ../plugins/clock/clock.c:401
-#, fuzzy
 msgid "Configure Clock"
-msgstr "Ρολόϊ του Xfce"
+msgstr "Ρύθμιση Ρολογιού"
 
-#: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
+#: ../plugins/clock/clock.c:413
+#: ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
-msgstr "Κλείδωμα"
+msgstr "Ρολόι"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
@@ -574,63 +558,57 @@ msgstr "LED"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "Επιλογές Ρολογιού"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "Χρήση 24ώρου ρολογιού"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "πμ/μμ"
+msgstr "Προβολ ΠΜ/ΜΜ"
 
 #: ../plugins/clock/clock.c:476
-#, fuzzy
 msgid "Display seconds"
-msgstr "Εμφάνιση της ώρας πριν τα εικονίδια"
+msgstr "Προβολή δεπτερολέπτων"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "Εκκινητής προγραμμάτων με προαιρετικό μενού"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
-#, fuzzy
 msgid "Test Plugin"
-msgstr "Άρθρωμα Εκκινητή"
+msgstr "Δοκιμαστικό Άρθρωμα"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "Αυτό το άρθρωμα δεν έχει νόημα"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "Προσθέτει ένα κενό ή μια γραμμή μεταξύ των αντικειμένων του ταμπλό"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "Κλείδωμα οθόνης"
+msgstr "Αποσύνδεση ή κλείδωμα οθόνης"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "Εμφάνιση μόνο ελα_χιστοποιημένων εφαρμογών"
+msgstr "Εμφάνιση όλων των εκτελούμενων εφαρμογών"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "Μικρογραφίες όλων των εικονικών επιφανειών εργασίας"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "Εμφάνιση εικονιδίων ει_δοποίησης"
+msgstr "Εμφάνιση εικονιδίων ειδοποίησης"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "Εμφάνιση μόνο ελα_χιστοποιημένων εφαρμογών"
+msgstr "Εμφάνιση εικονιδίων όλων των εκτελούμενων εφαρμογών"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "Τι ώρα είναι;"
+
