--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-09-29 20:47+0900\n"
-"PO-Revision-Date: 2005-09-29 20:46+0900\n"
+"PO-Revision-Date: 2005-10-01 22:17+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
-"Language-Team: Traditional Chinese <zh-l10n@linux.org.tw>\n"
+"Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,12 +20,12 @@ msgstr ""
 #: ../libxfce4panel/xfce-panel-external-item.c:167
 #, c-format
 msgid "An item was unexpectedly removed: \"%s\"."
-msgstr ""
+msgstr "所有的項目意外地被移除了: \"%s\" 。"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:664
-#, fuzzy, c-format
+#, c-format
 msgid "Remove \"%s\"?"
-msgstr "移除 %s 項目"
+msgstr "移除 \"%s\" 項目？"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:669 ../panel/panel.c:515
 #: ../panel/panel-app.c:558 ../panel/panel-app.c:583 ../panel/panel-app.c:610
@@ -38,84 +38,76 @@ msgstr "Xfce 面板"
 msgid ""
 "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
+"這個項目將會從面板中移除，其設定將會遺失"
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:755
-#, fuzzy
 msgid "Item Preferences"
-msgstr "項目屬性"
+msgstr "項目偏好設定"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
-#, fuzzy
 msgid "Remove Item"
-msgstr "移除 %s 項目"
+msgstr "移除項目"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:775 ../panel/panel.c:540
 #: ../panel/panel-settings.c:1253
 msgid "Panel Preferences"
-msgstr ""
+msgstr "面板偏好設定"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:783 ../panel/panel.c:547
 msgid "Manage Panel Items"
-msgstr ""
+msgstr "管理面板項目"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:791 ../panel/panel.c:554
-#, fuzzy
 msgid "New Panel"
-msgstr "Xfce 面板"
+msgstr "新增面板"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:799 ../panel/panel.c:561
-#, fuzzy
 msgid "Remove this Panel"
-msgstr "移除 %s 項目"
+msgstr "移除此面板"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813
 msgid "About this Item"
-msgstr ""
+msgstr "關於此項目"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:823 ../panel/panel.c:572
-#, fuzzy
 msgid "About the Xfce Panel"
-msgstr "Xfce 面板"
+msgstr "關於 Xfce 面板"
 
 #: ../panel/panel.c:524 ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr ""
+msgstr "離開"
 
 #: ../panel/panel.c:530
-#, fuzzy
 msgid "Restart"
-msgstr "重新啟動(_R)"
+msgstr "重新啟動"
 
 #: ../panel/panel-item-manager.c:353 ../panel/panel-item-manager.c:361
-#, fuzzy, c-format
+#, c-format
 msgid "Could not open \"%s\" module"
-msgstr ""
-"無法執行\"%s\":\n"
-"%s"
+msgstr "無法開啟 \"%s\" 模組"
 
 #: ../panel/panel-app.c:180
 msgid "Are you sure you want to exit?"
 msgstr "你確定要退出？"
 
 #: ../panel/panel-app.c:560
-#, fuzzy
 msgid "Exit Xfce Panel?"
-msgstr "Xfce 面板"
+msgstr "離開 Xfce 面板？"
 
 #: ../panel/panel-app.c:561
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
+msgstr "您無法移除最後一個面板。您要離開本程式嗎？"
 
 #: ../panel/panel-app.c:581
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr ""
+msgstr "移除面板 \"%d\" ？"
 
 #: ../panel/panel-app.c:585
 msgid "The panel will be removed and its configuration will be lost."
-msgstr ""
+msgstr "此面板將被移除，其設定將會遺失。"
 
 #: ../panel/panel-app.c:618
 msgid "Developer"
@@ -123,7 +115,7 @@ msgstr "開發者"
 
 # TODO check translation
 #: ../panel/main.c:46
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " Xfce Panel %s\n"
@@ -135,8 +127,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-"Xfce 面板\n"
-"版本 %s\n"
+"Xfce 面板 %s\n"
 "\n"
 "Xfce 桌面環境的組成部分\n"
 "http://www.xfce.org\n"
@@ -150,6 +141,8 @@ msgid ""
 " Usage: %s [OPTIONS]\n"
 "\n"
 msgstr ""
+"用法: %s [選項]\n"
+"\n"
 
 #. Only translate the descriptions, not the options itself
 #: ../panel/main.c:55
@@ -165,21 +158,29 @@ msgid ""
 " -a, --add       Add new items\n"
 "\n"
 msgstr ""
+" 選項\n"
+" -h, --help      顯示本訊息並離開\n"
+" -v, --version   顯示本訊息並離開\n"
+" -c, --customize 顯示設定對話框\n"
+" -s, --save      儲存面板設定\n"
+" -r, --restart   重新啟動面板\n"
+" -q, --quit      結束此程序\n"
+" -x, --exit      離開面板\n"
+" -a, --add       新增項目\n"
+"\n"
 
 #. floating?
 #: ../panel/panel-settings.c:382
-#, fuzzy
 msgid "Panel Type"
-msgstr "面板大小："
+msgstr "面板類型"
 
 #: ../panel/panel-settings.c:391
-#, fuzzy
 msgid "Fixed Position"
-msgstr "位置"
+msgstr "固定位置"
 
 #: ../panel/panel-settings.c:393
 msgid "Freely Moveable"
-msgstr ""
+msgstr "自由可移動"
 
 #. position
 #: ../panel/panel-settings.c:399
@@ -187,19 +188,16 @@ msgid "Position"
 msgstr "位置"
 
 #: ../panel/panel-settings.c:483
-#, fuzzy
 msgid "_Full Width"
-msgstr "全寬度"
+msgstr "全寬度(_F)"
 
 #: ../panel/panel-settings.c:492
-#, fuzzy
 msgid "Auto_hide"
-msgstr "自動隱藏"
+msgstr "自動隱藏(_H)"
 
 #: ../panel/panel-settings.c:510
-#, fuzzy
 msgid "Orientation:"
-msgstr "面板方向："
+msgstr "方向"
 
 #: ../panel/panel-settings.c:522
 msgid "Horizontal"
@@ -210,9 +208,8 @@ msgid "Vertical"
 msgstr "垂直"
 
 #: ../panel/panel-settings.c:533
-#, fuzzy
 msgid "Handle Style:"
-msgstr "把手"
+msgstr "把手風格："
 
 #: ../panel/panel-settings.c:545
 msgid "At both sides"
@@ -227,9 +224,8 @@ msgid "At the end"
 msgstr "在結尾"
 
 #: ../panel/panel-settings.c:583
-#, fuzzy
 msgid "Monitor"
-msgstr "編輯器"
+msgstr "監視器"
 
 #. size
 #: ../panel/panel-settings.c:665
@@ -261,26 +257,24 @@ msgstr "全"
 msgid ""
 "Drag items from the list to a panel or move existing items to a new location."
 msgstr ""
+"從清單中將項目拖曳到面板或是將現有的項目移到新位置。"
 
 #: ../panel/panel-settings.c:1036
 msgid "Avalaible Items"
-msgstr ""
+msgstr "可用的項目"
 
 #: ../panel/panel-settings.c:1049
 msgid "Add To Selected Panel"
-msgstr ""
+msgstr "新增到所選的面板"
 
 #: ../panel/panel-settings.c:1255
-#, fuzzy
 msgid "Add Items"
-msgstr "增加新項目(_N)"
+msgstr "增加新項目"
 
 #: ../plugins/launcher/launcher.c:310 ../plugins/launcher/launcher.c:355
-#, fuzzy, c-format
+#, c-format
 msgid "Could not run \"%s\""
-msgstr ""
-"無法執行\"%s\":\n"
-"%s"
+msgstr "無法執行\"%s\""
 
 #: ../plugins/launcher/launcher.c:1137
 msgid "New item"
@@ -376,9 +370,8 @@ msgid "Use _startup notification"
 msgstr "使用啟動提示(_S)"
 
 #: ../plugins/launcher/launcher-dialog.c:1104
-#, fuzzy
 msgid "New Item"
-msgstr "增加新項目"
+msgstr "新增項目"
 
 #: ../plugins/launcher/launcher-dialog.c:1209
 msgid ""
@@ -387,9 +380,8 @@ msgid ""
 msgstr "清單中的第一個項目會出現在面板上，其餘的項目會顯現在選單中。"
 
 #: ../plugins/launcher/launcher-dialog.c:1246
-#, fuzzy
 msgid "Configure Launcher"
-msgstr "啟動器"
+msgstr "設定啟動器"
 
 #: ../plugins/launcher/launcher-dialog.c:1255
 #: ../plugins/launcher/launcher.desktop.in.in.h:1
@@ -401,9 +393,8 @@ msgid "Select file"
 msgstr "選擇檔案"
 
 #: ../plugins/separator/separator.c:241
-#, fuzzy
 msgid "Configure Separator"
-msgstr "分隔線"
+msgstr "設定分隔線"
 
 #: ../plugins/separator/separator.c:253
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -411,49 +402,42 @@ msgid "Separator"
 msgstr "分隔線"
 
 #: ../plugins/separator/separator.c:266
-#, fuzzy
 msgid "_Draw Separator"
-msgstr "分隔線"
+msgstr "畫分隔線(_D)"
 
 #: ../plugins/separator/separator.c:275
 msgid "_Expand"
-msgstr ""
+msgstr "延展(_E)"
 
 #: ../plugins/actions/actions.c:295
-#, fuzzy
 msgid "Configure Panel Actions"
-msgstr "Xfce 面板設定"
+msgstr "設定面板動作"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
-#, fuzzy
 msgid "Panel Actions"
-msgstr "設定面板"
+msgstr "面板動作"
 
 #: ../plugins/actions/actions.c:324
-#, fuzzy
 msgid "Select action type:"
-msgstr "選擇指令"
+msgstr "選擇動作類型："
 
 #: ../plugins/actions/actions.c:333
-#, fuzzy
 msgid "Lock screen"
-msgstr "鎖住螢幕(_L)"
+msgstr "鎖住螢幕"
 
 #: ../plugins/actions/actions.c:334
-#, fuzzy
 msgid "Quit + Lock screen"
-msgstr "鎖住螢幕(_L)"
+msgstr "離開並鎖住螢幕"
 
 #: ../plugins/tasklist/tasklist.c:320
 msgid "Configure Task List"
-msgstr ""
+msgstr "設定工作清單"
 
 #: ../plugins/tasklist/tasklist.c:332
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
-#, fuzzy
 msgid "Task List"
-msgstr "工作列表"
+msgstr "工作清單"
 
 #: ../plugins/tasklist/tasklist.c:345
 msgid "Show tasks from _all workspaces"
@@ -463,27 +447,21 @@ msgstr "顯示所有工作區的工作(_A)"
 msgid "Show application _names"
 msgstr "顯示應用程式的名稱(_N)"
 
-# FIXME 譯文有待改進
 #: ../plugins/tasklist/tasklist.c:369
-#, fuzzy
 msgid "Never group tasks"
-msgstr "總是將工作分成群組(_G)"
+msgstr "永不將工作分門別類"
 
-# FIXME 譯文有待改進
 #: ../plugins/tasklist/tasklist.c:372
-#, fuzzy
 msgid "Automatically group tasks"
-msgstr "總是將工作分成群組(_G)"
+msgstr "自動將工作分門別類"
 
-# FIXME 譯文有待改進
 #: ../plugins/tasklist/tasklist.c:375
-#, fuzzy
 msgid "Always group tasks"
-msgstr "總是將工作分成群組(_G)"
+msgstr "總是將工作分門別類"
 
 #: ../plugins/pager/pager.c:275
 msgid "Configure Pager"
-msgstr ""
+msgstr "設定頁面切換器"
 
 #: ../plugins/pager/pager.c:287 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -507,9 +485,8 @@ msgid "Unable to register system tray: %s"
 msgstr "無法註冊系統匣： %s"
 
 #: ../plugins/systray/systray.c:345
-#, fuzzy
 msgid "Configure Status Area"
-msgstr "狀態區"
+msgstr "設定狀態區"
 
 #: ../plugins/systray/systray.c:357
 #: ../plugins/systray/systray.desktop.in.in.h:2
@@ -517,25 +494,21 @@ msgid "Status Area"
 msgstr "狀態區"
 
 #: ../plugins/systray/systray.c:370 ../plugins/clock/clock.c:442
-#, fuzzy
 msgid "Show _frame"
-msgstr "顯示時間(_T)"
+msgstr "顯示架構(_F)"
 
 #: ../plugins/iconbox/iconbox.c:748
-#, fuzzy
 msgid "Configure Icon Box"
-msgstr "Xfce 圖示盒"
+msgstr "設定圖示盒"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
 msgstr "圖示盒"
 
 #: ../plugins/iconbox/iconbox.c:774
-#, fuzzy
 msgid "Only show minimized applications"
-msgstr "只顯示最小化的應用程式(_S)"
+msgstr "只顯示最小化的應用程式"
 
 # NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
 # NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
@@ -553,15 +526,13 @@ msgid "%A %d %B %Y"
 msgstr "%Y年%B月%d日　%A"
 
 #: ../plugins/clock/clock.c:401
-#, fuzzy
 msgid "Configure Clock"
-msgstr "Xfce 時鐘"
+msgstr "設定時鐘"
 
 #  set names to use in option menus
 #: ../plugins/clock/clock.c:413 ../plugins/clock/clock.desktop.in.in.h:1
-#, fuzzy
 msgid "Clock"
-msgstr "鎖住"
+msgstr "時鐘"
 
 #: ../plugins/clock/clock.c:420
 msgid "Appearance"
@@ -582,21 +553,19 @@ msgstr "數位液晶顯示"
 
 #: ../plugins/clock/clock.c:450
 msgid "Clock Options"
-msgstr ""
+msgstr "時鐘選項"
 
 #: ../plugins/clock/clock.c:460
 msgid "Use 24-_hour clock"
-msgstr ""
+msgstr "使用24小時制(_H)"
 
 #: ../plugins/clock/clock.c:468
-#, fuzzy
 msgid "Show AM/PM"
-msgstr "上午/下午"
+msgstr "顯示 上午/下午"
 
 #: ../plugins/clock/clock.c:476
-#, fuzzy
 msgid "Display seconds"
-msgstr "讓時間顯示在圖示之前"
+msgstr "顯示秒"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
@@ -605,7 +574,7 @@ msgstr ""
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 #, fuzzy
 msgid "Test Plugin"
-msgstr "啟動器外掛"
+msgstr ""
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
@@ -613,32 +582,28 @@ msgstr ""
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
-msgstr ""
+msgstr "在面板項目間加入空白或直線"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
-#, fuzzy
 msgid "Log out or lock the screen"
-msgstr "鎖住螢幕"
+msgstr "登出或鎖住螢幕"
 
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:1
-#, fuzzy
 msgid "Show all running applications"
-msgstr "只顯示最小化的應用程式(_S)"
+msgstr "顯示所有執行中的應用程式"
 
 #: ../plugins/pager/pager.desktop.in.in.h:1
 msgid "Miniature view of all virtual desktops"
-msgstr ""
+msgstr "所有虛擬桌面的最小化檢視"
 
 #: ../plugins/systray/systray.desktop.in.in.h:1
-#, fuzzy
 msgid "Show notification icons"
-msgstr "顯示通知圖示(_N)"
+msgstr "顯示通知圖示"
 
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:2
-#, fuzzy
 msgid "Show icons of all running applications"
-msgstr "只顯示最小化的應用程式(_S)"
+msgstr "顯示所有執行中的應用程式圖示"
 
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
-msgstr ""
+msgstr "現在幾點？"
