Minor updates & polishing for the Greek translations
(Old svn revision: 18018)

--- a/po/el.po
+++ b/po/el.po
@@ -8,13 +8,12 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-09-29 20:47+0900\n"
-"PO-Revision-Date: 2005-09-30 19:48+0200\n"
+"PO-Revision-Date: 2005-10-06 21:56+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
-"Language-Team: Ελληνικά\n"
+"Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
 
 #: ../libxfce4panel/xfce-panel-external-item.c:167
 #, c-format
@@ -84,7 +83,7 @@ msgstr "Περί του Ταμπλό του Xfce"
 #: ../panel/panel.c:524
 #: ../plugins/actions/actions.c:332
 msgid "Quit"
-msgstr "1Έξοδος"
+msgstr "Έξοδος"
 
 #: ../panel/panel.c:530
 msgid "Restart"
@@ -231,9 +230,8 @@ msgid "At the end"
 msgstr "Στο τέλος"
 
 #: ../panel/panel-settings.c:583
-#, fuzzy
 msgid "Monitor"
-msgstr "_Παρακολούθηση"
+msgstr ""
 
 #. size
 #: ../panel/panel-settings.c:665
@@ -414,9 +412,8 @@ msgid "_Expand"
 msgstr "_Επέκταση"
 
 #: ../plugins/actions/actions.c:295
-#, fuzzy
 msgid "Configure Panel Actions"
-msgstr "Καταγραφή ενεργειών φίλτρων"
+msgstr "Ρύθμιση ενεργειών ταμπλό"
 
 #: ../plugins/actions/actions.c:307
 #: ../plugins/actions/actions.desktop.in.in.h:2
@@ -510,9 +507,8 @@ msgstr "Ρυθμίσεις Icon Box"
 
 #: ../plugins/iconbox/iconbox.c:760
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
-#, fuzzy
 msgid "Icon Box"
-msgstr "Icon Box"
+msgstr "Εικονοθήκη"
 
 #: ../plugins/iconbox/iconbox.c:774
 msgid "Only show minimized applications"
