Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 18129)

--- a/po/fi.po
+++ b/po/fi.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-08 06:14+0900\n"
-"PO-Revision-Date: 2005-09-29 13:51+0900\n"
+"POT-Creation-Date: 2005-10-08 16:53+0900\n"
+"PO-Revision-Date: 2005-10-08 10:10+0900\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -145,7 +145,7 @@ msgstr "O_minaisuudet..."
 
 #: panel/controls.c:757 panel/panel.c:637
 msgid "Add _new item"
-msgstr "Lisää _uusi osa"
+msgstr "Li_sää uusi osa"
 
 #: panel/controls.c:1040
 msgid "This item has no configuration options"
@@ -170,11 +170,11 @@ msgstr "_Lukitse näyttö"
 
 #: panel/panel.c:671
 msgid "_Restart"
-msgstr "Palauta"
+msgstr "Pala_uta"
 
 #: panel/panel.c:680
 msgid "E_xit"
-msgstr "Poistu"
+msgstr "_Poistu"
 
 #: panel/icons.c:63
 msgid "Default"
