Fix missing accelerators for xfce-utils , xfprint, xfce4-panel, 	 xfce4-mixer & xfdesktop in 4.2 branch (EL)
(Old svn revision: 18136)

--- a/po/el.po
+++ b/po/el.po
@@ -160,7 +160,7 @@ msgstr "Ταμπλώ του Xfce"
 
 #: panel/panel.c:652
 msgid "_About Xfce"
-msgstr "Περί του Xfce"
+msgstr "_Περί του Xfce"
 
 #: panel/panel.c:657
 msgid "_Help"
