Keyword `Id' expansion, hope this works.
(Old svn revision: 18168)

--- a/po/ja.po
+++ b/po/ja.po
@@ -1,3 +1,5 @@
+# $Id$
+#
 # Japanese translations for xfce4-panel package.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
@@ -8,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-09 17:55+0200\n"
-"PO-Revision-Date: 2005-09-28 16:37+0900\n"
+"PO-Revision-Date: 2005-10-10 01:18+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -46,24 +48,22 @@ msgstr "パネルからアイテムが削除されると、その設定も失わ
 #: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "プロパティ"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:538
-#, fuzzy
 msgid "Remove"
-msgstr "アイテムを削除"
+msgstr "削除"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:771
 msgid "About"
-msgstr ""
+msgstr "このプログラムについて"
 
 #. panel section
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:788 ../panel/panel.c:515
-#, fuzzy
 msgid "Panel"
-msgstr "新しいパネル"
+msgstr "パネル"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:797 ../panel/panel.c:524
 msgid "Manage Panel Items"
@@ -389,9 +389,8 @@ msgstr ""
 "ニューで見られます。"
 
 #: ../plugins/launcher/launcher-dialog.c:1255
-#, fuzzy
 msgid "Program Launcher"
-msgstr "ランチャーを設定"
+msgstr "プログラムのランチャー"
 
 #: ../plugins/launcher/launcher-dialog.c:1571
 msgid "Select file"
@@ -583,34 +582,3 @@ msgstr "実行している全てのアプリケーションを表示します"
 #: ../plugins/clock/clock.desktop.in.in.h:2
 msgid "What time is it?"
 msgstr "今何時ですか？"
-
-#~ msgid "Configure Separator"
-#~ msgstr "セパレーターを設定"
-
-#~ msgid "Configure Panel Actions"
-#~ msgstr "パネルアクションを設定"
-
-#~ msgid "Configure Task List"
-#~ msgstr "タスクリストを設定"
-
-#~ msgid "Configure Pager"
-#~ msgstr "ページャーを設定"
-
-#~ msgid "Configure Status Area"
-#~ msgstr "通知エリアを設定"
-
-#~ msgid "Configure Icon Box"
-#~ msgstr "アイコン箱を設定"
-
-#~ msgid "Configure Clock"
-#~ msgstr "時計を設定"
-
-#, fuzzy
-#~ msgid "Preferences"
-#~ msgstr "アイテムの設定"
-
-#~ msgid "Remove this Panel"
-#~ msgstr "このパネルを削除"
-
-#~ msgid "About this Item"
-#~ msgstr "このアイテムについて"
