Updated Kurdish translations by Erdal Ronahi <erdal.ronahi@gmail.com>.
(Old svn revision: 18191)

--- a/po/ku.po
+++ b/po/ku.po
@@ -1,4 +1,4 @@
-# translation of xfce4-panel.po to Kurdish
+# Kurdish translations for xfce4-panel package.
 # Copyright (C) 2002-2005 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Erdal Ronahi <erdal.ronahi@gmail.com>, 2005.
@@ -7,16 +7,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-08 06:14+0900\n"
-"PO-Revision-Date: 2005-08-25 01:08+0100\n"
+"POT-Creation-Date: 2005-10-09 15:52+0900\n"
+"PO-Revision-Date: 2005-10-11 00:41+0900\n"
 "Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
-"Language-Team: Kurdish <ku@li.org>\n"
+"Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural= n != 1\n"
 "X-Poedit-Language: Kurdish\n"
 "X-Poedit-SourceCharset: UTF-8\n"
+"X-Generator: KBabel 1.10\n"
 
 #: panel/xfce_support.c:557
 msgid "Select file"
@@ -48,7 +49,7 @@ msgstr "Bevel:"
 
 #: panel/item_dialog.c:311
 msgid "Run in _terminal"
-msgstr "Di termînalê de bimeşîne"
+msgstr "Di _termînalê de bimeşîne"
 
 #: panel/item_dialog.c:329
 msgid "Use startup _notification"
@@ -167,7 +168,6 @@ msgid "_Help"
 msgstr "_Alîkarî"
 
 #: panel/panel.c:666
-#, fuzzy
 msgid "_Lock screen"
 msgstr "_Ekranê qifl bike"
 
@@ -181,7 +181,7 @@ msgstr "Derbi_keve"
 
 #: panel/icons.c:63
 msgid "Default"
-msgstr ""
+msgstr "Wekî asayî"
 
 #: panel/icons.c:64
 msgid "Editor"
@@ -205,7 +205,7 @@ msgstr "Geroka alîkariyê"
 
 #: panel/icons.c:69
 msgid "Multimedia"
-msgstr ""
+msgstr "Multîmedya"
 
 #: panel/icons.c:70
 msgid "Network"
@@ -216,8 +216,9 @@ msgid "Graphics"
 msgstr "Grafîk"
 
 #: panel/icons.c:72
+#, fuzzy
 msgid "Printer"
-msgstr ""
+msgstr "Çaper"
 
 #: panel/icons.c:73
 msgid "Productivity"
@@ -304,8 +305,9 @@ msgid "Xfce Panel Settings"
 msgstr "Vebijêrkên Panela Xfce"
 
 #: settings/xfce_settings_dialog.c:477
+#, fuzzy
 msgid "Appearance"
-msgstr ""
+msgstr "Rûxsar"
 
 #: settings/xfce_settings_dialog.c:492
 msgid "Behaviour"
@@ -407,7 +409,6 @@ msgstr "Agahî"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:518
-#, fuzzy
 msgid "Lock"
 msgstr "Qifl"
 
