--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.22\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-09 17:55+0200\n"
-"PO-Revision-Date: 2005-10-01 22:17+0800\n"
+"PO-Revision-Date: 2005-10-11 00:00+0800\n"
 "Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -48,24 +48,22 @@ msgstr "這個項目將會從面板中移除，其設定將會遺失"
 #: ../plugins/systray/systray.c:345 ../plugins/iconbox/iconbox.c:748
 #: ../plugins/clock/clock.c:401
 msgid "Properties"
-msgstr ""
+msgstr "特性"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:762
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:813 ../panel/panel.c:538
-#, fuzzy
 msgid "Remove"
-msgstr "移除項目"
+msgstr "移除"
 
 #. about item, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:771
 msgid "About"
-msgstr ""
+msgstr "關於"
 
 #. panel section
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:788 ../panel/panel.c:515
-#, fuzzy
 msgid "Panel"
-msgstr "新增面板"
+msgstr "面板"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:797 ../panel/panel.c:524
 msgid "Manage Panel Items"
@@ -388,9 +386,8 @@ msgid ""
 msgstr "清單中的第一個項目會出現在面板上，其餘的項目會顯現在選單中。"
 
 #: ../plugins/launcher/launcher-dialog.c:1255
-#, fuzzy
 msgid "Program Launcher"
-msgstr "設定啟動器"
+msgstr "程式啟動器"
 
 #: ../plugins/launcher/launcher-dialog.c:1571
 msgid "Select file"
@@ -549,15 +546,15 @@ msgstr "啟動器"
 
 #: ../plugins/launcher/launcher.desktop.in.in.h:2
 msgid "Program launcher with optional menu"
-msgstr ""
+msgstr "程式啟動器，可附加選單"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:1
 msgid "Test Plugin"
-msgstr ""
+msgstr "測試外掛程式"
 
 #: ../plugins/testplugin/testplugin.desktop.in.in.h:2
 msgid "This plugin has no purpose"
-msgstr ""
+msgstr "此外掛程式無作用"
 
 #: ../plugins/separator/separator.desktop.in.in.h:1
 msgid "Adds a space or a line between panel items"
