Updated Esperanto translation (and my first commit to this repository).
(Old svn revision: 18226)

--- a/po/eo.po
+++ b/po/eo.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-08 06:14+0900\n"
-"PO-Revision-Date: 2005-09-29 13:48+0900\n"
+"PO-Revision-Date: 2005-10-10 23:52+0200\n"
 "Last-Translator: Sylvain Vedrenne <sylvain.vedrenne@free.fr>\n"
 "Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr "Malsukcesis trovi ian datumon. La panelo estos malplena."
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1178
 msgid "Position:"
-msgstr "Pozicio:"
+msgstr "Pozicion:"
 
 #: panel/controls_dialog.c:155
 msgid "Item properties"
@@ -42,7 +42,7 @@ msgstr "Elektu komandon"
 
 #: panel/item_dialog.c:268
 msgid "Command:"
-msgstr "Komando:"
+msgstr "Komandon:"
 
 #: panel/item_dialog.c:311
 msgid "Run in _terminal"
@@ -62,11 +62,11 @@ msgstr "Treni dosieron sur tiun kadron por ŝanĝi la piktogramon"
 
 #: panel/item_dialog.c:938
 msgid "Caption:"
-msgstr "Bildklarigo:"
+msgstr "Bildklarigon:"
 
 #: panel/item_dialog.c:967
 msgid "Tooltip:"
-msgstr "Priskribeto:"
+msgstr "Priskribeton:"
 
 #: panel/item_dialog.c:995
 msgid "Attach menu to launcher"
@@ -145,7 +145,7 @@ msgstr "_Parametroj..."
 
 #: panel/controls.c:757 panel/panel.c:637
 msgid "Add _new item"
-msgstr "Aldoni _novan elementon"
+msgstr "Aldonu _novan elementon"
 
 #: panel/controls.c:1040
 msgid "This item has no configuration options"
@@ -278,15 +278,15 @@ msgstr "Malsupra"
 
 #: settings/xfce_settings_dialog.c:268
 msgid "Panel size:"
-msgstr "Dimensioj de la panelo:"
+msgstr "Dimensiojn de la panelo:"
 
 #: settings/xfce_settings_dialog.c:284
 msgid "Panel orientation:"
-msgstr "Direkto de la panelo:"
+msgstr "Direkton de la panelo:"
 
 #: settings/xfce_settings_dialog.c:303
 msgid "Popup position:"
-msgstr "Ŝprucmenuo:"
+msgstr "Ŝprucmenuon:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
@@ -338,7 +338,7 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:505
 msgid "Hour mode:"
-msgstr "Reĝimo de horo:"
+msgstr "Reĝimon de horo:"
 
 #: plugins/clock/clock.c:512
 msgid "24 hour"
@@ -366,7 +366,7 @@ msgstr "Nombro da horizontaloj"
 
 #: plugins/pager/pager.c:316
 msgid "Number of columns:"
-msgstr "Nombro da vertikaloj"
+msgstr "Nombron da vertikaloj"
 
 #: plugins/pager/pager.c:373
 msgid "Graphical pager"
@@ -412,11 +412,11 @@ msgstr "Ŝlosu"
 
 #: plugins/systembuttons/systembuttons.c:550
 msgid "Button 1:"
-msgstr "Butono 1:"
+msgstr "Butonon 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Butono 2:"
+msgstr "Butonon 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
@@ -433,11 +433,11 @@ msgstr "Disigilo"
 
 #: plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
-msgstr "Retpoŝtkesto:"
+msgstr "Retpoŝtkeston:"
 
 #: plugins/mailcheck/mailcheck.c:875
 msgid "New mail command:"
-msgstr "Komando por novan mesaĝon:"
+msgstr "Komandon je nova mesaĝo:"
 
 #: plugins/mailcheck/mailcheck.c:889
 msgid "Command to run when new mail arrives"
@@ -449,7 +449,7 @@ msgstr "Komando startiginda kiam oni alklakas la butonon ĉe la panelo"
 
 #: plugins/mailcheck/mailcheck.c:940
 msgid "Interval (sec):"
-msgstr "Intertempo (sek):"
+msgstr "Intertempon (sek):"
 
 #: plugins/mailcheck/mailcheck.c:1016
 msgid "Mail checker"
