Updated Polish translations by Piotr Malinski <admin@rk.edu.pl>.
(Old svn revision: 18235)

--- a/po/pl.po
+++ b/po/pl.po
@@ -423,7 +423,7 @@ msgstr "Przycisk 2:"
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
 msgid "_Hide"
-msgstr "Ukryj"
+msgstr "_Ukryj"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
