Updated Japanese translations.
(Old svn revision: 18265)

--- a/po/ja.po
+++ b/po/ja.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-10-08 06:14+0900\n"
-"PO-Revision-Date: 2005-07-18 16:28+0900\n"
+"POT-Creation-Date: 2005-10-09 15:52+0900\n"
+"PO-Revision-Date: 2005-10-15 07:21+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -123,7 +123,7 @@ msgstr ""
 "Xfce デスクトップ環境の一部\n"
 "http://www.xfce.org\n"
 "\n"
-"GNU GPL の下に利用できます。\n"
+"GNU GPL の条件下に利用できます。\n"
 "\n"
 
 #: panel/main.c:488
@@ -184,7 +184,7 @@ msgstr "標準"
 
 #: panel/icons.c:64
 msgid "Editor"
-msgstr "エディタ"
+msgstr "エディター"
 
 #: panel/icons.c:65
 msgid "File management"
@@ -200,7 +200,7 @@ msgstr "ゲーム"
 
 #: panel/icons.c:68
 msgid "Help browser"
-msgstr "ヘルプブラウザ"
+msgstr "ヘルプブラウザー"
 
 #: panel/icons.c:69
 msgid "Multimedia"
@@ -216,7 +216,7 @@ msgstr "グラフィック"
 
 #: panel/icons.c:72
 msgid "Printer"
-msgstr "プリンタ"
+msgstr "プリンター"
 
 #: panel/icons.c:73
 msgid "Productivity"
@@ -232,7 +232,7 @@ msgstr "ターミナル"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
-msgstr "設定マネージャが利用できません"
+msgstr "設定マネージャーが利用できません"
 
 #: panel/popup.c:267
 msgid "Menu"
@@ -372,7 +372,7 @@ msgstr "列数:"
 
 #: plugins/pager/pager.c:373
 msgid "Graphical pager"
-msgstr "グラフィカルページャ"
+msgstr "グラフィカルページャー"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
@@ -431,7 +431,7 @@ msgstr "システムボタン"
 
 #: plugins/separator/separator.c:155
 msgid "Separator"
-msgstr "セパレータ"
+msgstr "セパレーター"
 
 #: plugins/mailcheck/mailcheck.c:838
 msgid "Mail box:"
