* Modified initial header strings using template by `msginit'.
* Modified initial comment strings using template by `msginit'.


(Old svn revision: 18370)

--- a/po/it.po
+++ b/po/it.po
@@ -1,14 +1,15 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# Alex Dupre <ale@FreeBSD.org>, 2004.
+# Italian translations for xfce4-panel package.
+# Copyright (C) 2002-2005 The Xfce development team.
+# This file is distributed under the same license as the xfce4-panel package.
+# Luca Marrocco <buildup at libero.it>, 2005.
+# Alex Dupre <ale@FreeBSD.org>, 2004-2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Xfce4\n"
+"Project-Id-Version: xfce4-panel 4.2.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-03-12 22:33+0100\n"
-"PO-Revision-Date: 2005-10-20 12:30+0100\n"
+"PO-Revision-Date: 2005-10-21 08:19+0900\n"
 "Last-Translator: Alex Dupre <ale@FreeBSD.org>\n"
 "Language-Team: GUFI <traduzioni@gufi.org>\n"
 "MIME-Version: 1.0\n"
